recursion.lessons.recursion.koch.Koch.scala.error
Koch:25: error: ')' expected but '}' found.
		}
                ^